src/components/Landing/Body-Accordion/AC.scss
.body {
  width: 100%;
  height: 100%;
  //padding: 0rem 6rem 0rem 3rem;
  font-family: monospace;

  &__content {
    display: flex;
    flex-direction: row;
    //border: 1px solid red;
    justify-content: space-between;
    height: 100%;
    //padding: 1rem 0rem;
    padding: 1rem 6rem 1rem 3rem;
    gap: 5rem;
  }

  &__buttonColumn {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    //border: 1px solid blue;
    //height: 100%;
    //overflow: hidden;
  }

  &__button {
    border-radius: 0.2rem;
    padding: 3rem 2rem;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    align-content: center;
    display: flex;
    align-items: center;
    border: 1px solid #c4c4c4
  }

  &__buttonText {
    font-weight: bold;
    font-size: 18px;
    color: black;
  }

  &__buttonIcon {
    position: absolute;
    right: -30px;
    top: 50%;
    transform: translateY(-50%);
    height: 56px;
    border-radius: 50%;
  }

  

  &__derecha {
    width: 100%;
    height: 100%;
  }

  &__box {
    margin-right: 1rem;
    height: 100%;
    display: flex;
    flex-direction: column;
    position: relative;
  }

  &__closeButton {
    cursor: pointer;
    z-index: 3  ;
    background-color: transparent;
    position: absolute;
    top: 10px;
    right: 10px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 100%;
    padding: 0;
    overflow: hidden;
    border: none;

  }

}
.scrollable {
    //overflow-y: auto;
    z-index: 3;
    //nuevo 
    overflow-y: auto;
    padding-right: 1rem;
    gap: 2rem;
    display: flex;
    flex-direction: column;
}
.scrollable::-webkit-scrollbar {
    width: 20px;
    //height: 10px;
}
.scrollable::-webkit-scrollbar-track {
    background: transparent;
    border: 1px solid black;
}
.scrollable::-webkit-scrollbar-thumb {
    background: #9f5548;
    //border-radius: 10px;
    border:1px solid transparent;
    background-clip: content-box;
}

/* Flecha arriba */
.scrollable::-webkit-scrollbar-button:vertical:start:decrement {
  background: url('../../../../assets/ARROW_UP.png') center center no-repeat;
  background-size: 20px 20px;
  height: 20px;
  border: 1px solid #333;
}

/* Flecha abajo */
.scrollable::-webkit-scrollbar-button:single-button:vertical:increment {
  background: url('../../../../assets/ARROW_DOWN.png') center center no-repeat;
  background-size: 20px 20px;
  border: 1px solid #333;
  height: 20px;
}

.card_content_container {
  height: 100%;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  padding: 1rem 0rem;
}

.body__button:hover {
  border: 1px solid #c4c4c4;
  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
}
.body__button--selected{
  border: 2px solid black;
}
.body__button--selected:hover {
  border: 2px solid black;
}

.body__closeButton:hover,
.body__closeButton:active {
  border-color: transparent;
  border: none;
  background-color: transparent;
}

.body__closeButton:focus,
.body__closeButton:focus-visible {
  outline: none !important;
  box-shadow: none !important;
  border-color: transparent !important;
}

.body__button:focus,
.body__button:focus-visible {
  outline: none !important;
  //border-color: transparent !important;
}

.speed-dial {
    //border: 1px solid green;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    //justify-content: center;
    gap: 1.5rem;
    top: 5.5rem;
    right: 2rem;
    position: absolute;
    //z-index: 5;

    &__item {
    button {
      cursor: pointer;
      //border: 1px solid var(--border-color);
      //border: #f5ede3 1px solid;
      display: inline-flex;
      border-top-left-radius: 10px;
      border-bottom-left-radius: 10px;
      border-top-right-radius: 99px;
      border-bottom-right-radius: 99px;
      padding: 0 0 0 12px;
      justify-content: right;
      align-items: center;
      height: 60px;
      background-color: transparent;
      //background-color: #f5ede3;
      transition: all 0.3s ease;
      width: auto;
      min-width: 40px;
      max-width: 200px;

      .icon {
        font-size: 20px;
        color: var(--icon-color, #333);
        display: flex;
        align-items: center;
        justify-content: center;
        //background-color: var(--button-bg-color, #fdfdfd);
        background-color: transparent;
        margin-left: 8px;
        width: 60px;
        height: 60px;
        border-radius: 50%;
        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
        transition: transform 0.3s ease;
      }

      .button-text {
        opacity: 0;
        visibility: hidden;
        margin-right: 0;
        font-size: 12px;
        font-family: 'Playfair Display', serif;
        font-style: italic;
        font-weight: 600;
        transition: all 0.3s ease;
      }

      &:hover .button-text,
      &:focus-visible .button-text {
        opacity: 1;
        visibility: visible;
        margin-right: 8px;
      }

      &:has(.button-text):hover,
      &:has(.button-text):focus-visible {
        //background-color: var(--button-hover-bg-color, #f0f0f0);
        //background-color: transparent;
        background-color: #f5ede3;
        border: 1px solid #f5ede3;

        .icon {
          transform: scale(1.1);
          background-color: #f5ede3;
        }
      }
      &:hover,
      &:focus-visible {
        background-color: transparent;
        border: 1px solid transparent;

        .icon {
          transform: scale(1.1);
          background-color: #f5ede3;
        }
      }
    }
  }
}

.speed-dial__item button:focus,
.speed-dial__item button:focus-visible {
  outline: none !important;
  box-shadow: none !important;
  border-color: transparent !important;
}

